# FlightKit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: build.sh
docs/: FlightKit_Design_Decisions.md
src/flightkit/: __init__.py  main.py
src/flightkit/cli/: __init__.py  main.py  utils.py
src/flightkit/core/: __init__.py  exceptions.py  interfaces.py  models.py  scraper.py
src/flightkit/exporters/: __init__.py  excel_exporter.py
src/flightkit/utils/: __init__.py  date.py  logger.py
