[project]
name = "flightkit"
version = "0.1.0"
description = "A simple tool to collect and clean flight price data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Reza Ghasemi", email = "syspo8@gmail.com" }
]
maintainers = [
    { name = "Reza Ghasemi", email = "syspo8@gmail.com" }
]
keywords = [
    "flight",
    "crawler",
    "scraper",
    "cli",
    "booking",
    "airline",
    "excel"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities"
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "click>=8.3.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.6.9",
    "pre-commit>=4.0.1"
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0"
]
types = [
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20240914"
]

[project.urls]
Homepage = "https://github.com/sysp0/FlightKit"
Repository = "https://github.com/sysp0/FlightKit"
Issues = "https://github.com/sysp0/FlightKit/issues"
Documentation = "https://github.com/sysp0/FlightKit#readme"

[project.scripts]
flightkit = "flightkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flightkit"]

[tool.hatch.envs.default]
dependencies = [
    "hatchling>=1.26.0"
]

[tool.hatch.envs.dev]
features = ["dev", "test", "types"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--color=yes",
    "--disable-warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]